--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,6 @@
   font-size: 18px;
   font-style: normal;
   line-height: 24.3px;
-  letter-spacing: 0;
 }
 
 .address a {
@@ -62,7 +61,81 @@
 }
 
 .cover {
+  position: relative;
+  width: 100%;
+  height: 757px;
+  background-image: url(/images/cover.jpg);
+  padding: 50px;
 
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+.cover__title {
+  position: relative;
+  width: 1000px;
+  height: 385px;
+  margin-top: 115px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 100px;
+  letter-spacing: 0.3em;
+  line-height: 115px;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.cover__title-item {
+  display: block;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-end {
+  text-align: end;
+}
+
+.cover__description {
+  position: relative;
+  width: 1000px;
+  height: 51px;
+  margin-top: 106px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.cover__description-subline {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  word-spacing: 0.9em;
+  text-transform: uppercase;
+
+}
+
+.cover__description-button {
+  width: 256px;
+  height: 51px;
+  background: none;
+  border: 1px solid #FFFFFF;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 25.83px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .lots {
@@ -72,6 +145,10 @@
 .lots__list-item {
   width: 334px;
   height: 596px;
+}
+
+.card__content {
+  position: relative;
 }
 
 .about {
