--- a/styles/style.css
+++ b/styles/style.css
@@ -224,18 +224,54 @@
 }
 
 .about {
-
+  width: 1052px;
+  height: 595px;
+  margin: 0 24px 180px 24px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
 }
 
 .about__logo {
   width: 240px;
   height: 240px;
-  background-color: #000000;
   border-radius: 50%;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__logo-image {
+  width: 136px;
+  height: 102px;
+}
+
+.about__column-left {
+  padding: 35px 0 0 47px;
+}
+
+.about__column-right {
+  padding: 133px 0 13px 25px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .footer {
-
+  height: 180px;
 
 }
 
