--- a/styles/style.css
+++ b/styles/style.css
@@ -54,12 +54,6 @@
   text-decoration: underline;
 }
 
-
-.main {
-
-
-}
-
 .cover {
   position: relative;
   width: 100%;
@@ -272,10 +266,37 @@
 
 .footer {
   height: 180px;
+  padding: 0 50px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr min-content 1fr;
 
 }
 
-.footer__socials-list-item {
+.footer__menu-list {
+  width: 163.9px;
+  height: 64px;
+  font-size: 18px;
+  line-height: 21.13px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+.footer__address {
+  width: 264.57px;
+  height: 98px;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  gap: 48px;
+  justify-self: flex-end;
+}
+
+.footer__social-icon {
   width: 48px;
   height: 48px;
 }
