--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,7 @@
   margin-left: 40px;
   font-size: 20px;
   line-height: 23.48px;
+  text-underline-offset: 5px;
 }
 
 .about {
@@ -291,6 +292,10 @@
   flex-direction: column;
   align-items: center;
   list-style: none;
+}
+
+.footer__menu-link {
+  text-underline-offset: 3px;
 }
 
 .footer__address {
